@@ -1,3 +1,7 @@
+2013-12-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>
+
+	* gcc.dg/pr56997-4.c: New testcase.
+
 2013-12-02  Marek Polacek  <polacek@redhat.com>
 
 	* c-c++-common/ubsan/vla-1.c: Split the tests into individual
