@@ -1,5 +1,12 @@
 2013-12-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
+	Fix C++0x memory model for unaligned fields in packed, aligned(4)
+	structures with -fno-strict-volatile-bitfields on STRICT_ALIGNMENT
+	targets like arm-none-eabi.
+	* expr.c (expand_assignment): Handle normal fields like bit regions.
+
+2013-12-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>
+
 	PR target/58115
 	* function.c (invoke_set_current_function_hook): Call
 	targetm.set_current_function after setting this_fn_optabs.
